editing comments and code for readability

--- a/ann.ipynb
+++ b/ann.ipynb
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "# Improved ANN Training Pipeline for Human Neuron Spike Prediction\n",
+    "#Imports and Setup\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -137,38 +137,33 @@
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "# --- Load your dataset ---\n",
+    "#Load your dataset\n",
     "df = pd.read_csv(\"spikecount_dataset.csv\")\n",
     "\n",
-    "# --- Add engineered features ---\n",
-    "df = df[df['spike_count'] > 0]  # Optional: remove zero-spike sweeps\n",
+    "#Add engineered features\n",
+    "df = df[df['spike_count'] > 0]  \n",
     "df = df[df['spike_count'] < 50]\n",
     "\n",
-    "# New features (mockups based on what's available)\n",
-    "df[\"log_spike_count\"] = np.log1p(df[\"spike_count\"])  # log-transformed target\n",
+    "#Log-transformed target\n",
+    "df[\"log_spike_count\"] = np.log1p(df[\"spike_count\"])\n",
     "\n",
-    "\n",
-    "\n",
-    "df[\"stim_amp_scaled\"] = df[\"stim_mean\"] / 1e12  # Convert to nA (example scaling)\n",
+    "df[\"stim_amp_scaled\"] = df[\"stim_mean\"] / 1e12 \n",
     "df[\"stim_amp_squared\"] = df[\"stim_amp_scaled\"] ** 2\n",
     "\n",
-    "# Select biologically meaningful features\n",
-    "features = [\n",
-    "    \"stim_mean\", \"stim_max\", \"stim_min\", \"stim_std\", \"stim_integral\",\n",
-    "    \"stim_duration\", \"stim_rise_time\", \"baseline_vstd\"\n",
-    "]\n",
+    "features = [\"stim_mean\", \"stim_max\", \"stim_min\", \"stim_std\", \"stim_integral\",\n",
+    "    \"stim_duration\", \"stim_rise_time\", \"baseline_vstd\"]\n",
     "\n",
     "X = df[features].values\n",
-    "y = df[\"spike_count\"].values\n",
+    "y = df[\"log_spike_count\"].values\n",
     "\n",
-    "# Scale features\n",
+    "#Scale features\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "# Train/test split\n",
+    "#Train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42)\n",
     "\n",
-    "# Build ANN\n",
+    "#Build ANN\n",
     "model = Sequential([\n",
     "    Dense(64, activation='relu', input_shape=(X_train.shape[1],)),\n",
     "    Dropout(0.3),\n",
@@ -180,7 +175,7 @@
     "model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
     "early_stop = EarlyStopping(monitor=\"val_loss\", patience=10, restore_best_weights=True)\n",
     "\n",
-    "# Train model\n",
+    "#Train model\n",
     "history = model.fit(X_train, y_train, validation_data=(X_test, y_test),\n",
     "                    epochs=100, batch_size=32, verbose=1, callbacks=[early_stop])\n",
     "\n",
@@ -191,7 +186,7 @@
     "print(f\"MSE: {mse:.2f}\")\n",
     "print(f\"R2 Score: {r2:.4f}\")\n",
     "\n",
-    "# Plot training loss\n",
+    "#Plot training loss\n",
     "plt.figure(figsize=(8, 4))\n",
     "plt.plot(history.history['loss'], label='Training Loss')\n",
     "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
@@ -202,7 +197,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Plot prediction vs actual\n",
+    "#Plot prediction vs actual\n",
     "plt.figure(figsize=(6, 6))\n",
     "plt.scatter(y_test, y_pred, alpha=0.5)\n",
     "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'r--', label='Ideal')\n",
