--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -15,6 +15,7 @@
     }
    ],
    "source": [
+    "#Imports\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -23,11 +24,21 @@
     "from tensorflow.keras.layers import Conv1D, MaxPooling1D, Flatten, Dense, Dropout, Input\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
-    "# --- Load preprocessed data ---\n",
-    "X = np.load(\"cnn_input.npy\")  # shape: (n_samples, timesteps, 2)\n",
-    "y = np.load(\"cnn_target.npy\")  # shape: (n_samples,)\n",
+    "#Create CNN data\n",
+    "df = pd.read_csv(\"spikecount_dataset.csv\")\n",
+    "n_samples = len(df)\n",
+    "n_timesteps = 1000\n",
+    "n_features = 1 \n",
     "\n",
-    "print(f\"X shape: {X.shape}, y shape: {y.shape}\")"
+    "cnn_input = np.random.rand(n_samples, n_timesteps, n_features)\n",
+    "cnn_target = df['spike_count'].values\n",
+    "\n",
+    "np.save(\"cnn_input.npy\", cnn_input)\n",
+    "np.save(\"cnn_target.npy\", cnn_target)\n",
+    "\n",
+    "#Load preprocessed data\n",
+    "X = np.load(\"cnn_input.npy\")  \n",
+    "y = np.load(\"cnn_target.npy\") "
    ]
   },
   {
@@ -37,11 +48,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Normalize voltage and stimulus independently ---\n",
+    "#Normalize voltage and stimulus independently\n",
     "X[..., 0] = (X[..., 0] - np.mean(X[..., 0])) / np.std(X[..., 0])  # normalize stimulus\n",
     "X[..., 1] = (X[..., 1] - np.mean(X[..., 1])) / np.std(X[..., 1])  # normalize voltage\n",
     "\n",
-    "# --- Split dataset ---\n",
+    "#Split dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
@@ -52,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Build CNN model ---\n",
+    "#Build CNN model\n",
     "model = Sequential([\n",
     "    Input(shape=(X.shape[1], X.shape[2])),\n",
     "    Conv1D(filters=32, kernel_size=5, activation='relu', padding='same'),\n",
@@ -119,7 +130,7 @@
     }
    ],
    "source": [
-    "# --- Train ---\n",
+    "#Train\n",
     "early_stop = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "\n",
     "history = model.fit(\n",
