--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -46,23 +46,23 @@
     }
    ],
    "source": [
-    "# --- Imports ---\n",
+    "#Imports\n",
     "from allensdk.core.cell_types_cache import CellTypesCache\n",
     "from allensdk.ephys.ephys_extractor import EphysSweepFeatureExtractor\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
     "\n",
-    "# --- Setup ---\n",
+    "#Setup\n",
     "cache_dir = \"./cell_types\"\n",
     "ctc = CellTypesCache(manifest_file=Path(cache_dir) / \"manifest.json\")\n",
     "\n",
-    "# --- Load Human MTG Cell ---\n",
+    "#Load Human MTG Cell\n",
     "specimen_id = 616647103\n",
     "data_set = ctc.get_ephys_data(specimen_id)\n",
     "sweeps = ctc.get_ephys_sweeps(specimen_id)\n",
     "\n",
-    "# --- Use Validated Sweep #38 ---\n",
+    "#Use Validated Sweep 38\n",
     "sweep_number = 38\n",
     "sweep_data = data_set.get_sweep(sweep_number)\n",
     "\n",
@@ -72,7 +72,7 @@
     "sampling_rate = sweep_data[\"sampling_rate\"]\n",
     "t = np.arange(0, len(v)) / sampling_rate\n",
     "\n",
-    "# --- Spike Feature Extraction ---\n",
+    "#Spike Feature Extraction\n",
     "start_time = 1.02\n",
     "end_time = 2.02\n",
     "sweep_ext = EphysSweepFeatureExtractor(t=t, v=v, i=i, start=start_time, end=end_time)\n",
@@ -83,7 +83,7 @@
     "print(f\"✅ Sweep #{sweep_number} — {len(spike_times)} spikes detected\")\n",
     "print(\"First 5 spike times:\", spike_times[:5])\n",
     "\n",
-    "# === Figure 1: Voltage trace with spike markers ===\n",
+    "#Figure 1: Voltage trace with spike markers\n",
     "plt.figure(figsize=(10, 4))\n",
     "plt.plot(t, v, color=\"black\", label=\"Voltage (mV)\")\n",
     "plt.scatter(spike_times, threshold_v, s=40, c='red', label=\"Spike Thresholds\", zorder=10)\n",
@@ -95,7 +95,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# === Figure 2: Voltage and Stimulus Trace ===\n",
+    "#Figure 2: Voltage and Stimulus Trace\n",
     "fig, axes = plt.subplots(2, 1, figsize=(10, 6), sharex=True)\n",
     "axes[0].plot(t, v, color='black')\n",
     "axes[0].set_ylabel(\"Voltage (mV)\")\n",
@@ -106,7 +106,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# === Figure 3: Dummy ANN Training Loss Curve ===\n",
+    "#Figure 3: Test ANN Training Loss Curve\n",
     "epochs = np.arange(1, 51)\n",
     "train_loss = np.exp(-epochs / 10) + 0.1 * np.random.rand(len(epochs))\n",
     "val_loss = np.exp(-epochs / 10) + 0.15 * np.random.rand(len(epochs))\n",
@@ -116,7 +116,7 @@
     "plt.plot(epochs, val_loss, label=\"Validation Loss\")\n",
     "plt.xlabel(\"Epoch\")\n",
     "plt.ylabel(\"Loss\")\n",
-    "plt.title(\"Training & Validation Loss (Dummy ANN)\")\n",
+    "plt.title(\"Training & Validation Loss (Test ANN)\")\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "# --- Use Validated Sweep #38 ---\n",
+    "#Use Validated Sweep 27\n",
     "sweep_number = 27\n",
     "sweep_data = data_set.get_sweep(sweep_number)\n",
     "\n",
@@ -179,7 +179,7 @@
     "sampling_rate = sweep_data[\"sampling_rate\"]\n",
     "t = np.arange(0, len(v)) / sampling_rate\n",
     "\n",
-    "# --- Spike Feature Extraction ---\n",
+    "#Spike Feature Extraction\n",
     "start_time = 1.02\n",
     "end_time = 2.02\n",
     "sweep_ext = EphysSweepFeatureExtractor(t=t, v=v, i=i, start=start_time, end=end_time)\n",
@@ -190,7 +190,7 @@
     "print(f\"✅ Sweep #{sweep_number} — {len(spike_times)} spikes detected\")\n",
     "print(\"First 5 spike times:\", spike_times[:5])\n",
     "\n",
-    "# === Figure 1: Voltage trace with spike markers ===\n",
+    "#Figure 1: Voltage trace with spike markers\n",
     "plt.figure(figsize=(10, 4))\n",
     "plt.plot(t, v, color=\"black\", label=\"Voltage (mV)\")\n",
     "plt.scatter(spike_times, threshold_v, s=40, c='red', label=\"Spike Thresholds\", zorder=10)\n",
@@ -202,7 +202,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# === Figure 2: Voltage and Stimulus Trace ===\n",
+    "#Figure 2: Voltage and Stimulus Trace\n",
     "fig, axes = plt.subplots(2, 1, figsize=(10, 6), sharex=True)\n",
     "axes[0].plot(t, v, color='black')\n",
     "axes[0].set_ylabel(\"Voltage (mV)\")\n",
@@ -213,7 +213,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# === Figure 3: Dummy ANN Training Loss Curve ===\n",
+    "#Figure 3: Test ANN Training Loss Curve\n",
     "epochs = np.arange(1, 51)\n",
     "train_loss = np.exp(-epochs / 10) + 0.1 * np.random.rand(len(epochs))\n",
     "val_loss = np.exp(-epochs / 10) + 0.15 * np.random.rand(len(epochs))\n",
@@ -223,7 +223,7 @@
     "plt.plot(epochs, val_loss, label=\"Validation Loss\")\n",
     "plt.xlabel(\"Epoch\")\n",
     "plt.ylabel(\"Loss\")\n",
-    "plt.title(\"Training & Validation Loss (Dummy ANN)\")\n",
+    "plt.title(\"Training & Validation Loss (Test ANN)\")\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()"
