--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -1,20 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "a63289e3-9a0d-41fd-b86f-dc4261914a1c",
-   "metadata": {},
-   "source": [
-    "hello"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "30590ff8-6c05-41d8-b422-3e03743f27f0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Imports and setup\n",
     "from allensdk.core.cell_types_cache import CellTypesCache\n",
     "from allensdk.ephys.ephys_extractor import EphysSweepFeatureExtractor\n",
     "from allensdk.api.queries.cell_types_api import CellTypesApi\n",
@@ -24,7 +17,7 @@
     "import os\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# Set up data directory\n",
+    "#Set up data directory\n",
     "os.makedirs('cell_types', exist_ok=True)\n",
     "manifest_path = './cell_types/manifest.json'\n",
     "ctc = CellTypesCache(manifest_file=manifest_path)\n"
@@ -45,9 +38,9 @@
     }
    ],
    "source": [
+    "#Human cells metadata\n",
     "specimens = ctc.get_cells(species=[CellTypesApi.HUMAN])\n",
-    "print(f\"Total human cells available: {len(specimens)}\")\n",
-    "\n"
+    "print(f\"Total human cells available: {len(specimens)}\")"
    ]
   },
   {
@@ -65,7 +58,7 @@
     }
    ],
    "source": [
-    "ll_rows = []\n",
+    "all_rows = []\n",
     "\n",
     "for cell in tqdm(specimens):\n",
     "    try:\n",
@@ -80,28 +73,28 @@
     "            try:\n",
     "                sweep_data = data_set.get_sweep(sweep_num)\n",
     "\n",
-    "                # Raw signal\n",
+    "                #Raw signal\n",
     "                stim = sweep_data['stimulus'] * 1e12  # to pA\n",
     "                voltage = sweep_data['response'] * 1e3  # to mV\n",
     "                sampling_rate = sweep_data['sampling_rate']\n",
     "                t = np.arange(len(stim)) / sampling_rate\n",
     "\n",
-    "                # Time window\n",
+    "                #Time window\n",
     "                start_time = 1.0\n",
     "                max_possible_end = len(t) / sampling_rate\n",
     "                end_time = min(2.0, max_possible_end - 0.01)  # stay just under total time\n",
     "                \n",
-    "                # Skip if sweep is too short\n",
+    "                #Skip if sweep is too short\n",
     "                if end_time - start_time <= 0.05:\n",
     "                    raise ValueError(\"Sweep too short for spike feature extraction\")\n",
     "\n",
-    "                # --- Spike Detection ---\n",
+    "                #Spike Detection\n",
     "                extractor = EphysSweepFeatureExtractor(t=t, v=voltage, i=stim, start=start_time, end=end_time)\n",
     "                extractor.process_spikes()\n",
     "                spike_times = extractor.spike_feature(\"threshold_t\")\n",
     "                spike_count = len(spike_times)\n",
     "\n",
-    "                # --- Basic Stimulus Features ---\n",
+    "                #Basic Stimulus Features\n",
     "                stim_duration = np.sum(np.abs(stim_win) > 10) / sampling_rate\n",
     "                stim_integral = np.trapz(stim_win, dx=1.0/sampling_rate)\n",
     "                stim_mean = np.mean(stim_win)\n",
@@ -118,7 +111,7 @@
     "                stim_offset = t_win[offset_idx] if offset_idx > 0 else np.nan\n",
     "                stim_symmetry = (stim_offset - stim_onset) - stim_rise_time if (stim_offset and stim_onset) else np.nan\n",
     "\n",
-    "                # --- Voltage-Based Biological Features ---\n",
+    "                #Voltage-Based Biological Features\n",
     "                if spike_count > 0:\n",
     "                    first_spike_latency = spike_times[0] - start_time\n",
     "                else:\n",
@@ -402,7 +395,7 @@
     }
    ],
    "source": [
-    "# Save the cleaned dataset for model training\n",
+    "#Save the cleaned dataset for model training\n",
     "df.to_csv('../spikecount_dataset.csv', index=False)\n",
     "print(\"Saved cleaned dataset to ../spikecount_dataset.csv\")\n"
    ]
